log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-output-volume
          emptyDir: {}
        - name: ping-pong-count
          persistentVolumeClaim:
            claimName: ping-pong-claim
      containers:
      - name: log-output-logger
        image: jukaveyo/log-output-logger:1.10
        volumeMounts:
        - name: log-output-volume
          mountPath: /usr/src/app/output
      - name: log-output-server
        image: jukaveyo/log-output-server:1.11.1
        volumeMounts:
        - name: log-output-volume
          mountPath: /usr/src/app/output
        - name: ping-pong-count
          mountPath: /usr/src/app/files
